--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   provider: ^6.0.5
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
